<resources>
    <string name="app_name">Decoing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Error_Message">ต้องใส่ input หรือ key ให้ครบ</string>
    <string name="isNotEnglish">ต้องใส่ภาษาอังกฤษเท่านั้น</string>
    <string name="Decrypt">Decrypt</string>
    <string name="Encrypt">Encrypt</string>
    <string name="ValueK">Input Value K</string>
    <string name="Code">Input code</string>
    <string name="OTP">OTP</string>
    <string name="railfencecipher">rail fence cipher</string>
    <string name="shiftCaesar">shiftCaesar</string>
    <string name="Value">Value</string>
    <string name="OutputK">K : </string>
    <string name="Output">Output : </string>
    <string name="Input">Input : </string>
</resources>
