<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">
    tools:context="add.wongchomphu.co.th.decoing.MainFragment">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Input"
                android:layout_weight="0.1"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tv_show_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.9"
                android:text="@string/Encrypt"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Output"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tv_show_output"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Decrypt"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OutputK"
                android:layout_weight="0.3"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tv_show_k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.7"
                android:text="@string/ValueK"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="30dp">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_ShiftCaesar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shiftCaesar"
                android:layout_weight="1"
                android:textColor="@color/colorRed"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_rail_fence_cipher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/railfencecipher"
                android:layout_weight="1"
                android:textColor="@color/colorYellow"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_OTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OTP"
                android:layout_weight="1"
                android:textColor="@color/colorLime" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_encode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Code"
            android:padding="14dp"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ" />
        <EditText
            android:id="@+id/edt_input_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:hint="@string/ValueK"
            android:padding="14dp"
            android:inputType="number"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
            android:maxLength="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp">

            <Button
                android:id="@+id/btn_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/Encrypt" />

            <Button
                android:id="@+id/btn_decrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/Decrypt" />
        </LinearLayout>

    </LinearLayout>
        </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
